--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-changeset": "^1.5.0-beta.0",
+    "ember-changeset-validations": "^1.2.11",
     "ember-cli": "2.18.0",
     "ember-cli-app-version": "^2.0.0",
-    "ember-cli-babel": "^5.1.7",
+    "ember-cli-babel": "^6.6.0",
     "ember-cli-bootstrap-datepicker": "0.5.6",
     "ember-cli-bootstrap-sassy": "0.5.5",
     "ember-cli-daterangepicker": "0.5.1",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-htmlbars": "^1.0.10",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.1",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-moment-shim": "^3.0.1",
@@ -35,6 +37,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "^0.8.19",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
     "ember-form-validation": "0.1.9",
@@ -45,6 +48,7 @@
     "ember-power-select": "1.9.6",
     "ember-resolver": "^2.0.3",
     "ember-responsive": "2.0.5",
+    "ember-toggle": "^5.2.4",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   },
